<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.joaquimley.smsparsing.MainActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/message" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <EditText
            android:id="@+id/et_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/phone_number_hint"
            android:inputType="number" />
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/send" />

    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000" />
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"/>
        <Button
            android:id="@+id/btn_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:text="Bật đèn" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2"/>
        <EditText
            android:id="@+id/et_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:maxLength="4"
            android:layout_alignParentLeft="true"
            android:hint="@string/delay_hint"
            android:inputType="number"
            android:text="@string/delay" />
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_alignLeft="@+id/et_delay"
            android:layout_marginLeft="80dp"
            android:text="@string/ms"/>
        <Button
            android:id="@+id/btn_blink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentRight="true"
            android:text="Nháy" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"/>
        <Button
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:text="-" />

        <EditText
            android:id="@+id/et_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:maxLength="3"
            android:hint="@string/percent_hint"
            android:inputType="number"
            android:selectAllOnFocus="false"
            android:text="@string/percent" />
        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_alignLeft="@+id/et_percent"
            android:layout_marginLeft="40dp"
            android:text="@string/pe"/>
        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentRight="true"
            android:text="+" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="-25dp"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btn_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:text="Min" />
        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:text="Đặt" />
        <Button
            android:id="@+id/btn_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_alignParentRight="true"
            android:text="Max" />
    </RelativeLayout>



</LinearLayout>
